--- a/index.html
+++ b/index.html
@@ -502,7 +502,7 @@
     </div>
     <footer>
       <h2>Designed and Developed By Nitin Bharti</h2>
-      <div class="social">
+      <div class="social" style="margin: 2px;position: absolute;bottom: 12px;">
         <a href="https://www.facebook.com/nitin.bharti.3990/"
           ><i class="fab fa-facebook"></i
         ></a>
@@ -520,7 +520,7 @@
         ></a>
       </div>
       <div class="end">
-        <i class="fa fa-copyright"></i>2023 CopyRight By Nitin Bharti
+        CopyRight<i class="fa fa-copyright"></i> 2023 By Nitin Bharti
       </div>
     </footer>
     <script
