--- a/index.html
+++ b/index.html
@@ -196,6 +196,13 @@
                           <div class="skill-percent">96%</div>
                         </div>
                       </div>
+                      <div class="skills-item padd-15">
+                        <h5>React</h5>
+                        <div class="progress">
+                          <div class="progress-in" style="width: 76%"></div>
+                          <div class="skill-percent">76%</div>
+                        </div>
+                      </div>
                     </div>
                   </div>
                 </div>
