--- a/index.html
+++ b/index.html
@@ -222,8 +222,11 @@
                             </h4>
                             <p class="timeline-text">
                               Currently, I am a Pre Final undergraduate at
-                              <span><a href="https://csjmu.ac.in/">UIET Chhatrapati Shahu Ji Maharaj
-                                University</a></span
+                              <span
+                                ><a href="https://csjmu.ac.in/"
+                                  >UIET Chhatrapati Shahu Ji Maharaj
+                                  University</a
+                                ></span
                               >
                               Kanpur, here I am studying Information Technology
                               to pursuing my technical degree in the subject of
@@ -238,9 +241,14 @@
                             <h4>Intermediate</h4>
                             <p class="timeline-text">
                               I have completed my secondary from
-                              <span><a href="https://basti.nic.in/public-utility/government-inter-collage/">Government Inter College</a></span> Basti, Uttar
-                              Pradesh(272001) through UP Board with my subjects
-                              of P.C.M.
+                              <span
+                                ><a
+                                  href="https://basti.nic.in/public-utility/government-inter-collage/"
+                                  >Government Inter College</a
+                                ></span
+                              >
+                              Basti, Uttar Pradesh(272001) through UP Board with
+                              my subjects of P.C.M.
                             </p>
                           </div>
                           <div class="timeline-item">
@@ -251,9 +259,15 @@
                             <h4>High School</h4>
                             <p class="timeline-text">
                               I have completed my higher from
-                              <span><a href="https://r-k-educational-academy.business.site/">R.K Educational Academy</a></span> Tema Rahmat
-                              Sant Kabir Nagar, Uttar Pradesh(272178) through UP
-                              Board with my subjects of Science & Drawwing.
+                              <span
+                                ><a
+                                  href="https://r-k-educational-academy.business.site/"
+                                  >R.K Educational Academy</a
+                                ></span
+                              >
+                              Tema Rahmat Sant Kabir Nagar, Uttar
+                              Pradesh(272178) through UP Board with my subjects
+                              of Science & Drawwing.
                             </p>
                           </div>
                         </div>
@@ -509,7 +523,7 @@
     </div>
     <footer>
       <h2>Designed and Developed By Nitin Bharti</h2>
-      <div class="social" style="margin: 2px;position: absolute;bottom: 12px;">
+      <div class="social" style="margin: 2px; position: absolute; bottom: 12px">
         <a href="https://www.facebook.com/nitin.bharti.3990/"
           ><i class="fab fa-facebook"></i
         ></a>
@@ -555,7 +569,7 @@
           const emailContent = `Hi ${name},\n\n${message}\n\nRegards,\n${name}`;
 
           // Create the mailto URI
-          const mailtoUri = `mailto:${email}?subject=${encodeURIComponent(
+          const mailtoUri = `mailto:bhnitin198@gmail.com?subject=${encodeURIComponent(
             subject
           )}&body=${encodeURIComponent(emailContent)}`;
 
