--- a/index.html
+++ b/index.html
@@ -568,10 +568,10 @@
           // Construct the pre-filled email content
           // const emailContent = `Hi ${name},\n\n${message}\n\nRegards,\n${name}`;
           // Construct the pre-filled email content for the user side
-          const emailContent = `Hi Nitin,
-            Name: ${name},
-            Subject: ${subject},
-            Message: ${message},
+          const emailContent = `Hi Nitin,\n\n
+            Name: ${name},\n\n
+            Subject: ${subject},\n\n
+            Message: ${message},\n\n
             Best regards,
             Nitin Bharti
             `;
