--- a/index.html
+++ b/index.html
@@ -569,8 +569,7 @@
           // const emailContent = `Hi ${name},\n\n${message}\n\nRegards,\n${name}`;
           // Construct the pre-filled email content for the user side
           // // Construct the pre-filled email content for the user side
-          const emailContent = `Hi Nitin,\n\nName: ${name},\n\nSubject: ${subject},\n\nMessage: ${message},\n\nBest regards,
-          Nitin Bharti`;
+          const emailContent = `Hi Nitin,\n\nName: ${name}\n\nSubject: ${subject}\n\nMessage: ${message}\n\nBest regards,\n\nNitin Bharti`;
           // Create the mailto URI
           const mailtoUri = `mailto:bhnitin198@gmail.com?subject=${encodeURIComponent(
             subject
