--- a/index.html
+++ b/index.html
@@ -413,9 +413,7 @@
                 <div class="contact-info-item padd-15">
                   <div class="icon"><i class="fa fa-envelope"></i></div>
                   <h4>Email</h4>
-                  <a href="mailto:bhnitin941@gmail.com" target="_blank"
-                    >Send a message</a
-                  >
+                  <a href="mailto:bhnitin941@gmail.com" target="_blank">Send a message</a>
                 </div>
                 <div class="contact-info-item padd-15">
                   <div class="icon"><i class="fab fa-linkedin"></i></div>
@@ -568,7 +566,7 @@
           // // Construct the pre-filled email content for the user side
           const emailContent = `Hi Nitin,\n\nName: ${name}\n\nMessage: ${message}\n\nBest regards,\nNitin Bharti`;
           // Create the mailto URI
-          const mailtoUri = `mailto:bhnitin198@gmail.com?subject=${encodeURIComponent(
+          const mailtoUri = `mailto:bhnitin941@gmail.com?subject=${encodeURIComponent(
             subject
           )}&body=${encodeURIComponent(emailContent)}`;
 
