--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
     <div class="main-container">
       <div class="aside">
         <div class="logo">
-          <a href="#"><span>A</span>tlas</a>
+          <a href="#"><span>G</span>root</a>
         </div>
         <div class="nav-toggler">
           <span></span>
